added Footer content

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -29,29 +29,32 @@
             </div>
         </nav>
 
-        <section>
-            <img src="./resources/images/fredBarrett.jpg" alt="Photo of Fred Barrett">
-        </section>
+        <main>    
+            <section>
+                    <img src="./resources/images/fredBarrett.jpg" alt="Photo of Fred Barrett">
+            </section>
 
-        <section>
-            <h1>I'm Fred Barrett A Full Stack Developer based in Minneapolis</h1>
-        </section>
+            <section>
+                    <h1>I'm Fred Barrett A Full Stack Developer based in Minneapolis</h1>
+            </section>
 
-        <section>
-            <p>This is my personal portfolio project website. I have been learning about Full Stack Development on Codecademy.</p>
-        </section>
+            <section>
+                    <p>This is my personal portfolio project website. I have been learning about Full Stack Development on Codecademy.</p>
+            </section>
 
-        <section class="projects">
+            <section class="projects">
 
-        </section>
+            </section>
 
-        <section class="skills">
+            <section class="skills">
 
-        </section>
-
+            </section>    
+        </main>
+        
         <footer>
             <div class="contact-me">
-                
+                <p>Contact: Fred Barrett</p>
+                <p><a href="mailto:fred.barrett@gmail.com">fred.barrett@gmail.com</a></p>
             </div>
         </footer>
     </body>
