added Id tags to navigation"

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -21,10 +21,10 @@
 
             <div class="nav">
                 <ul>
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Skills</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -34,7 +34,7 @@
                     <img src="./resources/images/fredBarrett.jpg" alt="Photo of Fred Barrett">
             </section>
 
-            <section>
+            <section id="about">
                     <h1>I'm Fred Barrett A Full Stack Developer based in Minneapolis</h1>
             </section>
 
@@ -42,17 +42,17 @@
                     <p>This is my personal portfolio project website. I have been learning about Full Stack Development on Codecademy.</p>
             </section>
 
-            <section class="projects">
+            <section id="projects">
 
             </section>
 
-            <section class="skills">
+            <section id="skills">
 
             </section>    
         </main>
         
         <footer>
-            <div class="contact-me">
+            <div id="contact">
                 <p>Contact: Fred Barrett</p>
                 <p><a href="mailto:fred.barrett@gmail.com">fred.barrett@gmail.com</a></p>
             </div>
