--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="top-banner">
-                <p>A Codecademy Portfolio website - Learn to code at Codecademy.com</p>
+                <p>Welcome to my protfolio page a Codecademy Portfolio website - Learn to code at Codecademy.com</p>
             </div>
         </header>
 
