changed text, background colors, image size

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -31,7 +31,7 @@
 
         <main>    
             <section>
-                    <img src="./resources/images/fredBarrett02.jpg" alt="Photo of Fred Barrett">
+                    <img class="owner" src="./resources/images/fredBarrett02.jpg" alt="Photo of Fred Barrett">
             </section>
 
             <section id="about">
