Vertical-align middel navbar changed margin main image

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -16,7 +16,7 @@
 
         <nav>
             <div class="logo">
-                <p>fred Barrett</p>
+                <p>fred barrett</p>
             </div>
 
             <div class="nav">
