changed background image to css added left and right to overlap text on image

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -31,15 +31,18 @@
 
         <main>    
             <section>
-                    <img class="owner" src="./resources/images/fredBarrett02.jpg" alt="Photo of Fred Barrett">
-            </section>
-
-            <section id="about">
-                    <h1>I'm Fred Barrett A Full Stack Developer based in Minneapolis</h1>
-            </section>
-
-            <section>
-                    <p>This is my personal portfolio project website. I have been learning about Full Stack Development on Codecademy.</p>
+                <div class="container">
+                    <div class="left">
+                        <!-- <img class="owner" src="./resources/images/fredBarrett02.jpg" alt="Photo of Fred Barrett"> -->
+                    </div>
+                    <div class="right">
+                        <div class="content">
+                            <h1>I'm Fred Barrett A Full Stack Developer based in Minneapolis</h1>
+                            <p>This is my personal portfolio project website. I have been learning about Full Stack Development on Codecademy.</p>
+                        </div>
+                    </div>
+                </div>
+                    
             </section>
 
             <section id="projects">
