added h2 Skills and div skills-container

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -50,7 +50,10 @@
             </section>
 
             <section id="skills">
-
+                <h2>Skills</h2>
+                <div class="skills-container">
+                    
+                </div>
             </section>    
         </main>
         
