added icons under skills

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -52,7 +52,14 @@
             <section id="skills">
                 <h2>Skills</h2>
                 <div class="skills-container">
-                    
+                   <img class="html5" src="./resources/icons/png/005-html-5.png"> 
+                   <img class="css3" src="./resources/icons/png/004-css.png">
+                   <img class="javascript" src="./resources/icons/png/002-js.png">
+                   <img class="chrome" src="./resources/icons/png/006-chrome.png">
+                   <img class="github" src="./resources/icons/png/001-github.png">
+                   <img class="terminal" src="./resources/icons/png/003-terminal.png">
+                   <img class="node" src="./resources/icons/png/007-nodejs.png">
+                   <img class="visualstudio" src="./resources/icons/png/009-visual-studio.png">
                 </div>
             </section>    
         </main>
@@ -61,6 +68,7 @@
             <div id="contact">
                 <p>Contact: Fred Barrett</p>
                 <p><a href="mailto:fred.barrett@gmail.com">fred.barrett@gmail.com</a></p>
+                <a href="https://www.flaticon.com/free-icons/html" title="html icons">Html icons created by Freepik - Flaticon</a>
             </div>
         </footer>
     </body>
