Changed logo to fred.b and size of text to 2rem

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -16,7 +16,7 @@
 
         <nav>
             <div class="logo">
-                <p>Fred Barrett</p>
+                <p>Fred.B</p>
             </div>
 
             <div class="nav">
