added anchor tag to html5 image to test clicking on image

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -52,7 +52,7 @@
             <section id="skills">
                 <h2>Skills</h2>
                 <div class="skills-container">
-                   <img class="html5" src="./resources/icons/png/005-html-5.png"> 
+                   <a href="https://en.wikipedia.org/wiki/HTML5"><img class="html5" src="./resources/icons/png/005-html-5.png"></a> 
                    <img class="css3" src="./resources/icons/png/004-css.png">
                    <img class="javascript" src="./resources/icons/png/002-js.png">
                    <img class="chrome" src="./resources/icons/png/006-chrome.png">
