--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="right">
                         <div class="content">
-                            <h1>I'm Fred Barrett A Full Stack Developer based in Minneapolis</h1>
+                            <h1>I'm Fred Barrett A Full Stack Developer based in Minneapolis.</h1>
                             <p>This is my personal portfolio project website. I have been learning about Full Stack Development on Codecademy.</p>
                         </div>
                     </div>
