--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -52,7 +52,27 @@
             </section>
 
             <section id="projects">
-
+                <div class="col1">
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+                </div>
+                <div class="col2">
+                    <ul>
+                        <li>Git</li>
+                        <li>GitHub</li>
+                        <li>GitHubPages</li>
+                    </ul>
+                </div>
+                <div class="col3">
+                    <ul>
+                        <li>Chrome Developers Tools</li>
+                        <li>Node</li>
+                        <li>Terminal</li>
+                    </ul>
+                </div>
             </section>
 
             <section id="skills">
