changed projects column calss to col

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -52,21 +52,21 @@
             </section>
 
             <section id="projects">
-                <div class="col1">
+                <div class="col">
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>JavaScript</li>
                     </ul>
                 </div>
-                <div class="col2">
+                <div class="col">
                     <ul>
                         <li>Git</li>
                         <li>GitHub</li>
                         <li>GitHubPages</li>
                     </ul>
                 </div>
-                <div class="col3">
+                <div class="col">
                     <ul>
                         <li>Chrome Developers Tools</li>
                         <li>Node</li>
