Added div class row around column class divs

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -52,26 +52,28 @@
             </section>
 
             <section id="projects">
-                <div class="col">
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                    </ul>
-                </div>
-                <div class="col">
-                    <ul>
-                        <li>Git</li>
-                        <li>GitHub</li>
-                        <li>GitHubPages</li>
-                    </ul>
-                </div>
-                <div class="col">
-                    <ul>
-                        <li>Chrome Developers Tools</li>
-                        <li>Node</li>
-                        <li>Terminal</li>
-                    </ul>
+                <div class="row">
+                    <div class="column">
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <ul>
+                            <li>Git</li>
+                            <li>GitHub</li>
+                            <li>GitHubPages</li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <ul>
+                            <li>Chrome Developers Tools</li>
+                            <li>Node</li>
+                            <li>Terminal</li>
+                        </ul>
+                    </div>
                 </div>
             </section>
 
