Added styling for vertical lists and columns in Projects section

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -52,26 +52,26 @@
             </section>
 
             <section id="projects">
+                <h2>Projects</h2>
                 <div class="row">
                     <div class="column">
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>JavaScript</li>
+                        <ul class="vertical-list">
+                            <li><a href="#">HTML</a></li>
+                            <li><a href="#">CSS</a></li>
+                            <li><a href="#">JavaScript</a></li>
                         </ul>
                     </div>
                     <div class="column">
-                        <ul>
-                            <li>Git</li>
-                            <li>GitHub</li>
-                            <li>GitHubPages</li>
+                        <ul class="vertical-list">
+                            <li><a href="#">Git</a></li>
+                            <li><a href="#">GitHub</a></li>
+                            <li><a href="#">GitHubPages</a></li>
                         </ul>
                     </div>
                     <div class="column">
-                        <ul>
-                            <li>Chrome Developers Tools</li>
-                            <li>Node</li>
-                            <li>Terminal</li>
+                        <ul class="vertical-list">
+                            <li><a href="#">Node</a></li>
+                            <li><a href="#">Terminal</a></li>
                         </ul>
                     </div>
                 </div>
