Added id about to content in the div class right

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -42,7 +42,7 @@
                         <!-- <img class="owner" src="./resources/images/fredBarrett02.jpg" alt="Photo of Fred Barrett"> -->
                     </div>
                     <div class="right">
-                        <div class="content">
+                        <div class="content" id="about">
                             <h1>I'm Fred Barrett A Full Stack Developer based in Minneapolis.</h1>
                             <p>This is my personal portfolio project website. I have been learning about Full Stack Development on Codecademy.</p>
                         </div>
