Added link to icons in the Skills section

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -80,14 +80,14 @@
             <section id="skills">
                 <h2>Skills</h2>
                 <div class="skills-container">
-                   <a href="https://en.wikipedia.org/wiki/HTML5"><img class="html5" src="./resources/icons/png/005-html-5.png"></a> 
-                   <img class="css3" src="./resources/icons/png/004-css.png">
-                   <img class="javascript" src="./resources/icons/png/002-js.png">
-                   <img class="chrome" src="./resources/icons/png/006-chrome.png">
-                   <img class="github" src="./resources/icons/png/001-github.png">
-                   <img class="terminal" src="./resources/icons/png/003-terminal.png">
-                   <img class="node" src="./resources/icons/png/007-nodejs.png">
-                   <img class="visualstudio" src="./resources/icons/png/009-visual-studio.png">
+                   <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank"><img class="html5" src="./resources/icons/png/005-html-5.png"></a> 
+                   <a href="https://en.wikipedia.org/wiki/CSS" target="_blank"><img class="css3" src="./resources/icons/png/004-css.png"></a>
+                   <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank"><img class="javascript" src="./resources/icons/png/002-js.png"></a>
+                   <a href="https://developer.chrome.com/docs/devtools/" target="_blank"><img class="chrome" src="./resources/icons/png/006-chrome.png"></a>
+                   <a href="https://en.wikipedia.org/wiki/GitHub" target="_blank"><img class="github" src="./resources/icons/png/001-github.png"></a>
+                   <a href="https://en.wikipedia.org/wiki/Linux_console" target="_blank"><img class="terminal" src="./resources/icons/png/003-terminal.png"></a>
+                   <a href="https://en.wikipedia.org/wiki/Node" target="_blank"><img class="node" src="./resources/icons/png/007-nodejs.png"></a>
+                   <a href="https://en.wikipedia.org/wiki/Visual_Studio" target="_blank"><img class="visualstudio" src="./resources/icons/png/009-visual-studio.png"></a>
                 </div>
             </section>    
         </main>
