--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -56,8 +56,8 @@
                 <div class="row">
                     <div class="column">
                         <ul class="vertical-list">
-                            <li><a href="#">HTML</a></li>
-                            <li><a href="#">CSS</a></li>
+                            <li><a href="https://github.com/freddieb77/portfolioProjects/blob/main/personalPortfolioWebsite/index.html" target="_blank">HTML</a></li>
+                            <li><a href="https://github.com/freddieb77/portfolioProjects/blob/main/personalPortfolioWebsite/resources/css/style.css" target="_blank">CSS</a></li>
                             <li><a href="#">JavaScript</a></li>
                         </ul>
                     </div>
