Added Linkedin to Contact section

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -94,8 +94,9 @@
         
         <footer>
             <div id="contact">
-                <p>Contact: Fred Barrett</p>
+                <h2>Contact</h2>
                 <p><a href="mailto:fred.barrett@gmail.com">fred.barrett@gmail.com</a></p>
+                <p><a href="https://www.linkedin.com/in/fred-barrett-46892b95/">Fred's Linkedin</a></p>
                 <a href="https://www.flaticon.com/free-icons/html" title="html icons">Html icons created by Freepik - Flaticon</a>
             </div>
         </footer>
