--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -93,8 +93,10 @@
             
             <section id="contact">
                 <h2>Contact</h2>
-                <p><a href="mailto:fred.barrett@gmail.com">fred.barrett@gmail.com</a></p>
-                <p><a href="https://www.linkedin.com/in/fred-barrett-46892b95/">Fred's Linkedin</a></p>
+                    <div class="contact-container">
+                        <p><a href="mailto:fred.barrett@gmail.com">fred.barrett@gmail.com</a></p>
+                        <p><a href="https://www.linkedin.com/in/fred-barrett-46892b95/">Fred's Linkedin</a></p>
+                    </div>
             </section>
         </main>
         
