--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+        <script src="./resources/js/main.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description"
             content="A Portfolio page for Fred Barrett's Full Stack Projects">
@@ -26,7 +27,10 @@
             </div>
 
             <div class="nav">
-                <ul>
+                <ul>            <p>
+                    Fun fact! I've been programing for
+                    <span id="time-container">0</span> seconds!
+                  </p>
                     <li><a href="#about">About Me</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#skills">Skills</a></li>
@@ -45,6 +49,10 @@
                         <div class="content" id="about">
                             <h1>I'm Fred Barrett A Full Stack Developer based in Minneapolis.</h1>
                             <p>This is my personal portfolio project website. I have been learning about Full Stack Development on Codecademy.</p>
+                            <p>
+                                Fun fact! I've been programing for
+                                <span id="time-container">0</span> seconds!
+                            </p>
                         </div>
                     </div>
                 </div>
