Changed links between index.html and contact.html

--- a/personalPortfolioWebsite/contact.html
+++ b/personalPortfolioWebsite/contact.html
@@ -27,38 +27,17 @@
             </div>
 
             <div class="nav">
-                <ul>            <p>
-                    Fun fact! I've been programing for
-                    <span id="time-container">0</span> seconds!
-                  </p>
-                    <li><a href="#about">About Me</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                <ul> 
+                    <li><a href="index.html#about">About Me</a></li>
+                    <li><a href="index.html#projects">Projects</a></li>
+                    <li><a href="index.html#skills">Skills</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div>
         </nav>
 
         <main>    
-            <section>
-                <div class="container">
-                    <div class="left">
-                        <!-- <img class="owner" src="./resources/images/fredBarrett02.jpg" alt="Photo of Fred Barrett"> -->
-                    </div>
-                    <div class="right">
-                        <div class="content" id="about">
-                            <h1>I'm Fred Barrett A Full Stack Developer based in Minneapolis.</h1>
-                            <p>This is my personal portfolio project website. I have been learning about Full Stack Development on Codecademy.</p>
-                            <p>
-                                Fun fact! I've been programing for
-                                <span id="time-container">0</span> seconds!
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                    
-            </section>
-            
+
             <section id="contact">
                 <h2>Contact</h2>
                     <div class="contact-container">
