--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -34,7 +34,7 @@
                     <li><a href="#about">About Me</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#skills">Skills</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -97,14 +97,6 @@
                    <a href="https://en.wikipedia.org/wiki/Node" target="_blank"><img class="node" src="./resources/icons/png/007-nodejs.png"></a>
                    <a href="https://en.wikipedia.org/wiki/Visual_Studio" target="_blank"><img class="visualstudio" src="./resources/icons/png/009-visual-studio.png"></a>
                 </div>
-            </section>
-            
-            <section id="contact">
-                <h2>Contact</h2>
-                    <div class="contact-container">
-                        <p><a href="mailto:fred.barrett@gmail.com">fred.barrett@gmail.com</a></p>
-                        <p><a href="https://www.linkedin.com/in/fred-barrett-46892b95/">Fred's Linkedin</a></p>
-                    </div>
             </section>
         </main>
         
