Added lang=en to html tag

--- a/personalPortfolioWebsite/contact.html
+++ b/personalPortfolioWebsite/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Fred Barrett's Portfolio</title>
         <link rel="stylesheet" href="./resources/css/style.css" rel="text/css">
