--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -68,8 +68,8 @@
                     </div>
                     <div class="column">
                         <ul class="vertical-list">
-                            <li><a href="#">Git</a></li>
-                            <li><a href="#">GitHub</a></li>
+                            <li><a href="https://github.com/freddieb77/portfolioProjects/commits/main/personalPortfolioWebsite/index.html">Git</a></li>
+                            <li><a href="https://github.com/freddieb77">GitHub</a></li>
                             <li><a href="#">GitHubPages</a></li>
                         </ul>
                     </div>
