Added Read-more link to about, display none for more-info, added JavaScript to change display of more-info to block on mouse click

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-        <script src="./resources/js/main.js"></script>
+        
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description"
             content="A Portfolio page for Fred Barrett's Full Stack Projects">
@@ -46,10 +46,14 @@
                         <div class="content" id="about">
                             <h1>I'm Fred Barrett A Full Stack Developer based in Minneapolis.</h1>
                             <p>This is my personal portfolio project website. I have been learning about Full Stack Development on Codecademy.</p>
-                            <p>
-                                Fun fact! I've been programing for
-                                <span id="time-container">0</span> seconds!
+                            <p id="info">I have been working in the IT industry for 21 years -- <a id="read-more"> More fun facts!</a></p> 
+                            <p id="more-info">I graduated from Minnesota School of Business in 2003 with a Network Support Specialist Degree. I started in Help Desk, moved into 
+                                Operating System/Software Package Deployment. From there I Managed the Help Desk and Technicians. I also started working on some System Administration,
+                                Backup Administration, and then Moved into working as the Network Administrator. Now I am starting a new adventure learning Full Stack Development!
                             </p>
+
+                            <script src="./resources/js/main.js"></script>
+
                         </div>
                     </div>
                 </div>
@@ -68,8 +72,8 @@
                     </div>
                     <div class="column">
                         <ul class="vertical-list">
-                            <li><a href="https://github.com/freddieb77/portfolioProjects/commits/main/personalPortfolioWebsite/index.html">Git</a></li>
-                            <li><a href="https://github.com/freddieb77">GitHub</a></li>
+                            <li><a href="https://github.com/freddieb77/portfolioProjects/commits/main/personalPortfolioWebsite/index.html" target="_blank">Git</a></li>
+                            <li><a href="https://github.com/freddieb77" target="_blank">GitHub</a></li>
                             <li><a href="#">GitHubPages</a></li>
                         </ul>
                     </div>
