--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -46,7 +46,7 @@
                         <div class="content" id="about">
                             <h1>I'm Fred Barrett A Full Stack Developer based in Minneapolis.</h1>
                             <p>This is my personal portfolio project website. I have been learning about Full Stack Development on Codecademy.</p>
-                            <p id="info">I have been working in the IT industry for 21 years -- <a id="read-more"> More fun facts!</a></p> 
+                            <p id="info">I have been working in the IT industry for 21 years -- <a id="read-more"> Read more here more fun facts!</a></p> 
                             <p id="more-info">I graduated from Minnesota School of Business in 2003 with a Network Support Specialist Degree. I started in Help Desk, moved into 
                                 Operating System/Software Package Deployment. From there I Managed the Help Desk and Technicians. I also started working on some System Administration,
                                 Backup Administration, and then Moved into working as the Network Administrator. Now I am starting a new adventure learning Full Stack Development!
