Changed logo from Fred.B to FreddieB

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -23,7 +23,7 @@
 
         <nav>
             <div class="logo">
-                <p>Fred.B</p>
+                <p>FreddieB</p>
             </div>
 
             <div class="nav">
