Added span to h1 and changed color of the span

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="right">
                         <div class="content" id="about">
-                            <h1>I'm Fred Barrett A Full Stack Developer based in Minneapolis.</h1>
+                            <h1>I'm Fred Barrett A Full Stack Developer <span id="contrast">based in Minneapolis.</span></h1>
                             <p>This is my personal portfolio project website. I have been learning about Full Stack Development on Codecademy.</p>
                             <p id="info">I have been working in the IT industry for 21 years -- <a id="read-more"> Read more here more fun facts!</a></p> 
                             <p id="more-info">I graduated from Minnesota School of Business in 2003 with a Network Support Specialist Degree. I started in Help Desk, moved into 
