Added read-less to about-me, css hover/pointer, js function showless

--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -48,7 +48,7 @@
                             <p id="info">I have been working in the IT industry for 21 years -- <a id="read-more"> Read more here more fun facts!</a></p> 
                             <p id="more-info">I graduated from Minnesota School of Business in 2003 with a Network Support Specialist Degree. I started in Help Desk, moved into 
                                 Operating System/Software Package Deployment. From there I Managed the Help Desk and Technicians. I also started working on some System Administration,
-                                Backup Administration, and then Moved into working as the Network Administrator. Now I am starting a new adventure learning Full Stack Development!
+                                Backup Administration, and then Moved into working as the Network Administrator. Now I am starting a new adventure learning Full Stack Development! -- <a id="read-less">Read Less</a>
                             </p>
 
                             <script src="./resources/js/main.js"></script>
