Added social media to contact page

--- a/personalPortfolioWebsite/contact.html
+++ b/personalPortfolioWebsite/contact.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-        <script src="./resources/js/main.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description"
             content="A Portfolio page for Fred Barrett's Full Stack Projects">
@@ -41,8 +41,20 @@
             <section id="contact">
                 <h2>Contact</h2>
                     <div class="contact-container">
-                        <p><a href="mailto:fred.barrett@gmail.com">fred.barrett@gmail.com</a></p>
-                        <p><a href="https://www.linkedin.com/in/fred-barrett-46892b95/">Fred's Linkedin</a></p>
+                        <p>I'm currently learning Full Stack Development and taking on freelance work. If you are interested in hiring me for your project please use the form below to get in touch. </p>
+                        <p>You can also find me on the following channels</p>
+                    </div>
+
+                    <div class="channels">
+                        <a href="#" class="fa fa-linkedin"></a>
+                        <a href="#" class="fa fa-google"></a>
+                        <a href="#" class="fa fa-twitter"></a>
+                        <a href="#" class="fa fa-facebook"></a>
+                        <a href="#" class="fa fa-instagram"></a>
+                    </div>
+
+                    <div class="contact-form">
+                        
                     </div>
             </section>
         </main>
