--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -79,7 +79,8 @@
                     <div class="column">
                         <ul class="vertical-list">
                             <li><a href="#">Node</a></li>
-                            <li><a href="#">Terminal</a></li>
+                            <li><a href="./resources/images/Terminal.jpg" target="_blank">Terminal</a></li>
+                            <li><a href="./resources/images/VSCode.jpg" target="_blank">VS Code</a></li>
                         </ul>
                     </div>
                 </div>
@@ -94,7 +95,7 @@
                    <a href="https://developer.chrome.com/docs/devtools/" target="_blank"><img class="chrome" src="./resources/icons/png/006-chrome.png"></a>
                    <a href="https://en.wikipedia.org/wiki/GitHub" target="_blank"><img class="github" src="./resources/icons/png/001-github.png"></a>
                    <a href="https://en.wikipedia.org/wiki/Linux_console" target="_blank"><img class="terminal" src="./resources/icons/png/003-terminal.png"></a>
-                   <a href="https://en.wikipedia.org/wiki/Node" target="_blank"><img class="node" src="./resources/icons/png/007-nodejs.png"></a>
+                   <a href="https://en.wikipedia.org/wiki/Node.js" target="_blank"><img class="node" src="./resources/icons/png/007-nodejs.png"></a>
                    <a href="https://en.wikipedia.org/wiki/Visual_Studio" target="_blank"><img class="visualstudio" src="./resources/icons/png/009-visual-studio.png"></a>
                 </div>
             </section>
