--- a/personalPortfolioWebsite/contact.html
+++ b/personalPortfolioWebsite/contact.html
@@ -31,7 +31,7 @@
                     <li><a href="index.html#about">About Me</a></li>
                     <li><a href="index.html#projects">Projects</a></li>
                     <li><a href="index.html#skills">Skills</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
                 </ul>
             </div>
         </nav>
@@ -54,7 +54,7 @@
                     </div>
 
                     <div class="contact-form">
-                        
+
                     </div>
             </section>
         </main>
