--- a/personalPortfolioWebsite/contact.html
+++ b/personalPortfolioWebsite/contact.html
@@ -46,11 +46,11 @@
                     </div>
 
                     <div class="channels">
-                        <a href="#" class="fa fa-linkedin"></a>
+                        <a href="https://www.linkedin.com/in/fred-barrett-46892b95/" target="_blank" class="fa fa-linkedin"></a>
                         <a href="#" class="fa fa-google"></a>
-                        <a href="#" class="fa fa-twitter"></a>
-                        <a href="#" class="fa fa-facebook"></a>
-                        <a href="#" class="fa fa-instagram"></a>
+                        <a href="https://twitter.com/freddieb_77" target="_blank" class="fa fa-twitter"></a>
+                        <a href="https://www.facebook.com/fred.j.barrett" target="_blank" class="fa fa-facebook"></a>
+                        <a href="https://www.instagram.com/freddieb77/" target="_blank" class="fa fa-instagram"></a>
                     </div>
 
                     <div class="contact-form">
