--- a/personalPortfolioWebsite/contact.html
+++ b/personalPortfolioWebsite/contact.html
@@ -42,7 +42,7 @@
                 <h2>Contact</h2>
                     <div class="contact-container">
                         <p>I'm currently learning Full Stack Development and taking on freelance work. If you are interested in hiring me for your project please use the form below to get in touch. </p>
-                        <p>You can also find me on the following channels</p>
+                        <p>You can also find me on the following channels : </p>
                     </div>
 
                     <div class="channels">
@@ -61,7 +61,7 @@
         
         <footer>
             <div>
-                <a href="https://www.flaticon.com/free-icons/html" title="html icons">Html icons created by Freepik - Flaticon</a>
+            
             </div>
         </footer>
     </body>
