--- a/personalPortfolioWebsite/contact.html
+++ b/personalPortfolioWebsite/contact.html
@@ -49,7 +49,7 @@
                     
                     <div class="channels">
                         <a href="https://www.linkedin.com/in/fred-barrett-46892b95/" target="_blank" class="fa fa-linkedin"></a>
-                        <a href="#" class="fa fa-google"></a>
+                        <!-- <a href="#" class="fa fa-google"></a> -->
                         <a href="https://twitter.com/freddieb_77" target="_blank" class="fa fa-twitter"></a>
                         <a href="https://www.facebook.com/fred.j.barrett" target="_blank" class="fa fa-facebook"></a>
                         <a href="https://www.instagram.com/freddieb77/" target="_blank" class="fa fa-instagram"></a>
