--- a/personalPortfolioWebsite/contact.html
+++ b/personalPortfolioWebsite/contact.html
@@ -35,6 +35,17 @@
                     <li><a href="index.html">Home</a></li>
                 </ul>
             </div>
+
+            <div class="dropdown">
+                <button class="dd-btn"><img src="./resources/images/Hamburger Menu.svg"></button>
+                <div class="dropdown-content">
+                    <a href="#about">About Me</a>
+                    <a href="#projects">Projects</a>
+                    <a href="#skills">Skills</a>
+                    <a href="index.html">Home</a>
+                </div>  
+            </div>
+
         </nav>
 
         <main>    
