--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -33,6 +33,16 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
+
+            <div class="dropdown">
+                <button class="dd-btn"><img src="./resources/images/Hamburger Menu.svg"></button>
+                <div class="dropdown-content">
+                    <a href="#about">About Me</a>
+                    <a href="#projects">Projects</a>
+                    <a href="#skills">Skills</a>
+                    <a href="contact.html">Contact</a>
+                </div>  
+            </div>
         </nav>
 
         <main>    
