--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -34,6 +34,17 @@
                 </ul>
             </div>
 
+            <div class="dropdown">
+                <button class="dd-btn"><img src="./resources/images/Hamburger Menu.svg"></button>
+                <div class="dropdown-content">
+                    <a href="contact.html">Contact</a>
+                    <a href="#skills">Skills</a>
+                    <a href="#projects">Projects</a>
+                    <a href="#about">About Me</a>
+                </div>  
+            </div>
+        </nav>    
+
         <main>    
             <section>
                 <div class="container">
