--- a/personalPortfolioWebsite/index.html
+++ b/personalPortfolioWebsite/index.html
@@ -34,7 +34,7 @@
                 </ul>
             </div>
 
-            <!-- <div class="dropdown">
+            <div class="dropdown">
                 <button class="dd-btn"><img src="./resources/images/Hamburger Menu.svg"></button>
                 <div class="dropdown-content">
                     <a href="contact.html">Contact</a>
@@ -42,7 +42,7 @@
                     <a href="#projects">Projects</a>
                     <a href="#about">About Me</a>
                 </div>  
-            </div> -->
+            </div>
         </nav>    
 
         <main>    
