--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <meta name="description"
             content="A Portfolio page for Fred Barrett's Full Stack Projects">
         <meta name="keywords"
-            content="full stack, developer, portfolio, html, css, javascript"
+            content="full stack, developer, portfolio, html, css, javascript">
     </head>
 
     <body>
