--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,9 @@
                 <button class="dd-btn"><img src="./resources/images/Hamburger Menu.svg"></button>
                 <div class="dropdown-content">
                     <a href="index.html">Home</a>
-                    <a href="#skills">Skills</a>
-                    <a href="#projects">Projects</a>
-                    <a href="#about">About Me</a>
+                    <a href="index.html#skills">Skills</a>
+                    <a href="index.html#projects">Projects</a>
+                    <a href="index.html#about">About Me</a>
                 </div>  
             </div>
         </nav>
@@ -53,7 +53,7 @@
                 <h2>Contact</h2>
                     <div class="contact-container">
                         <p>I'm currently learning Full Stack Development and looking for a Fulltime position or taking on freelance work. <br>
-                            If you are interested in hiring me or woudld like to hire me for your project please use the form below to get in touch. </p>
+                            If you are interested in hiring me or would like to hire me for your project please use the form below to get in touch. </p>
                         <p>You can also find me on the following channels : </p>
                     </div>
                     
