--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                 <div class="row">
                     <div class="column">
                         <ul class="vertical-list">
-                            <li><a href="https://github.com/freddieb77/portfolioProjects/blob/main/personalPortfolioWebsite/index.html" target="_blank">HTML</a></li>
+                            <!-- <li><a href="https://github.com/freddieb77/portfolioProjects/blob/main/personalPortfolioWebsite/index.html" target="_blank">HTML</a></li> -->
+                            <li><a href="https://github.com/freddieb77/portfolioProjects/blob/main/index.html" target="_blank">HTML</a></li>
                             <li><a href="https://github.com/freddieb77/portfolioProjects/blob/main/personalPortfolioWebsite/resources/css/style.css" target="_blank">CSS</a></li>
                             <li><a href="#">JavaScript</a></li>
                         </ul>
