Updated Url to first projects list

--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
                 <div class="row">
                     <div class="column">
                         <ul class="vertical-list">
-                            <!-- <li><a href="https://github.com/freddieb77/portfolioProjects/blob/main/personalPortfolioWebsite/index.html" target="_blank">HTML</a></li> -->
                             <li><a href="https://github.com/freddieb77/portfolioProjects/blob/main/index.html" target="_blank">HTML</a></li>
-                            <li><a href="https://github.com/freddieb77/portfolioProjects/blob/main/personalPortfolioWebsite/resources/css/style.css" target="_blank">CSS</a></li>
-                            <li><a href="#">JavaScript</a></li>
+                            <li><a href="https://github.com/freddieb77/portfolioProjects/tree/main/resources/css" target="_blank">CSS</a></li>
+                            <li><a href="https://github.com/freddieb77/portfolioProjects/blob/main/resources/js/main.js" target="_blank">JavaScript</a></li>
                         </ul>
                     </div>
                     <div class="column">
